# DBDuck

./: .bandit  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
DBDuck/: __init__.py  models.py
DBDuck/adapters/: __init__.py  _sqlalchemy_adapter.py  mssql_adapter.py
DBDuck/core/: __init__.py  adapter_router.py  base_adapter.py  connection_manager.py  mongo_connection_manager.py  security.py  settings.py
DBDuck/udom/: udom.py
DBDuck/udom/adapters/: ai_adapter.py  graph_adapter.py  nosql_adapter.py  sql_adapter.py  vector_adapter.py
DBDuck/udom/models/: umodel.py
DBDuck/udom/uql/: uql_parser.py
DBDuck/utils/: logger.py
dbduck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: INITIALIZE.md  PRODUCTION_READINESS.md
examples/: README.md  app_production.py  ex_mssql.py  example_dbduck_models.py  example_mongo.py  example_mysql.py  example_psql.py
examples/dbs/: __init__.py
examples/dbs/mongodb/: __init__.py  advanced.py  basic.py
examples/dbs/mssql/: __init__.py  advanced.py  basic.py
examples/dbs/mysql/: __init__.py  advanced.py  basic.py
examples/dbs/postgres/: __init__.py  advanced.py  basic.py
examples/dbs/sqlite/: __init__.py  advanced.py  basic.py
examples/fastapi_dbduck_app/: README.md  main.py
examples/query_builder/: README.md  example_all_sql_backends.py  example_model_relationships.py  example_sql_query_builder.py
migrations/sql/: README.md  alembic.ini  env.py
tests/: nosql_inject.py  sql_inject.py  test_connection.py  test_dbduck_models_compat.py  test_error_messages.py  test_examples.py  test_mongodb_support.py  test_mssql_adapter.py  test_mysql_adapter.py  test_nosql_routing.py  test_real_apps_features.py  test_runtime_settings.py  test_security_features.py  test_security_injection.py  test_sql_database_objects.py  test_udom_production.py  test_umodel.py
tests/integration/: README.md  _helpers.py  test_mongo_integration.py  test_sql_backends_integration.py
(+2 files in other folders)
