[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DBDuck"
version = "0.1.0"
description = "Universal data object model for SQL, NoSQL, graph, vector, and AI databases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Veeresh Hanni" }
]
keywords = ["database", "orm", "udom", "sql", "mongodb", "sqlalchemy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "sqlalchemy>=2.0.25",
  "bcrypt>=4.1.2",
  "pymysql>=1.1.0",
  "psycopg2-binary>=2.9.9",
  "typing-extensions>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/Veeresh-Hanni/DBDuck"
Repository = "https://github.com/Veeresh-Hanni/DBDuck"
Issues = "https://github.com/Veeresh-Hanni/DBDuck/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "alembic>=1.14.0",
  "bandit[toml]>=1.7.10",
  "pip-audit>=2.7.3",
]
mongo = [
  "pymongo>=4.7.2",
]
mssql = [
  "pyodbc>=5.1.0",
]
mysql = [
  "pymysql>=1.1.0",
]
postgres = [
  "psycopg2-binary>=2.9.9",
]
all = [
  "pyodbc>=5.1.0",
  "pymongo>=4.7.2",
  "mongoengine",
  "redis",
  "boto3",
  "google-cloud-firestore",
  "neo4j",
  "neomodel",
  "rdflib",
  "pyTigerGraph",
  "cryptography",
  "psycopg2-binary",
  "sqlalchemy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["udom*", "DBDuck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = [
  "tests",
  ".venv",
  "wslvenv",
  "DBDuck/udom/adapters/sql",
  "DBDuck/udom/adapters/sql_adapter.py",
]
skips = ["B101"]
